fix: remove hard-coded rasulkireev.com from templates

--- a/{{ cookiecutter.project_slug }}/frontend/templates/pages/uses.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/pages/uses.html
@@ -25,7 +25,7 @@
         <h1>Tech I Use</h1>
         <p>
           I run
-          <a href="https://www.rasulkireev.com/projects">multiple projects</a>
+          <a href="{{ cookiecutter.author_url }}">multiple projects</a>
           at the same time and using reliable and simple tech is the key to running everything smoothly. Here's what I use:
         </p>
         <ul>
