--- a/{{ cookiecutter.project_slug }}/frontend/templates/base_app.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/base_app.html
@@ -258,7 +258,7 @@
       "author": {
         "@type": "Person",
         "name": "{{ cookiecutter.author_name }}",
-        "url": "https://rasulkireev.com/"
+        "url": "{{ cookiecutter.author_url }}"
       }
     }
     </script>
