--- a/{{ cookiecutter.project_slug }}/frontend/templates/base_landing.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/base_landing.html
@@ -264,7 +264,7 @@
       "author": {
         "@type": "Person",
         "name": "{{ cookiecutter.author_name }}",
-        "url": "https://rasulkireev.com/"
+        "url": "{{ cookiecutter.author_url }}"
       }
     }
     </script>
