--- a/{{ cookiecutter.project_slug }}/frontend/templates/blog/blog_post.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/blog/blog_post.html
@@ -50,7 +50,7 @@
     "author": {
       "@type": "Person",
       "name": "{{ cookiecutter.author_name }}",
-      "url": "https://rasulkireev.com/"
+      "url": "{{ cookiecutter.author_url }}"
     },
     "publisher": {
       "@type": "Organization",
