--- a/{{ cookiecutter.project_slug }}/frontend/templates/blog/blog_posts.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/blog/blog_posts.html
@@ -62,7 +62,7 @@
     "author": {
       "@type": "Person",
       "name": "{{ cookiecutter.author_name }}",
-      "url": "https://rasulkireev.com/"
+      "url": "{{ cookiecutter.author_url }}"
     }
   }
   </script>
