--- a/{{ cookiecutter.project_slug }}/frontend/templates/pages/pricing.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/pages/pricing.html
@@ -158,7 +158,7 @@
     "author": {
       "@type": "Person",
       "name": "{{ cookiecutter.author_name }}",
-      "url": "https://rasulkireev.com/"
+      "url": "{{ cookiecutter.author_url }}"
     }
   }
   </script>
