--- a/{{ cookiecutter.project_slug }}/frontend/templates/base_app.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/base_app.html
@@ -257,8 +257,8 @@
       "url": "https://{{ '{{ request.get_host }}' }}/",
       "author": {
         "@type": "Person",
-        "name": "{{ cookiecutter.author_name }}",
-        "url": "{{ cookiecutter.author_url }}"
+        "name": "{{ cookiecutter.author_name }}"{% if cookiecutter.author_url %},
+        "url": "{{ cookiecutter.author_url }}"{% endif %}
       }
     }
     </script>
