--- a/{{ cookiecutter.project_slug }}/frontend/templates/pages/pricing.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/pages/pricing.html
@@ -157,8 +157,8 @@
     "url": "{% raw %}https://{{ request.get_host }}{% url 'pricing' %}{%- endraw %}",
     "author": {
       "@type": "Person",
-      "name": "{{ cookiecutter.author_name }}",
-      "url": "{{ cookiecutter.author_url }}"
+      "name": "{{ cookiecutter.author_name }}"{% if cookiecutter.author_url %},
+      "url": "{{ cookiecutter.author_url }}"{% endif %}
     }
   }
   </script>
