--- a/{{ cookiecutter.project_slug }}/frontend/templates/pages/uses.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/pages/uses.html
@@ -25,7 +25,11 @@
         <h1>Tech I Use</h1>
         <p>
           I run
+          {% if cookiecutter.author_url %}
           <a href="{{ cookiecutter.author_url }}">multiple projects</a>
+          {% else %}
+          multiple projects
+          {% endif %}
           at the same time and using reliable and simple tech is the key to running everything smoothly. Here's what I use:
         </p>
         <ul>
